crates/conduit-derive/tests/compile_fail/command_impl_trait.rs
use conduit_derive::command;

#[command]
fn impl_trait_handler(val: impl ToString) -> Vec<u8> {
    val.to_string().into_bytes()
}

fn main() {}
